# music2

./: README.md  meson.build  meson_options.txt
cli/: Main.vala  meson.build
core/: Daemon.vala  Equalizer.vala  MprisPlayer.vala  MprisRoot.vala  MprisTrackList.vala  Player.vala  Queue.vala  Server.vala  meson.build
data/: application.css  io.elementary.music2-eq.gschema.xml  io.elementary.music2-ui.gschema.xml  io.elementary.music2.contract  io.elementary.music2.desktop  io.elementary.music2.gresource.xml  io.elementary.music2.gschema.xml  io.elementary.music2.service.in  io.elementary.music2d.desktop  meson.build
lib/: Constants.vala  DataBaseManager.vala  Enums.vala  Structs.vala  config.vala.in  meson.build
lib/CObjects/: EqualizerPreset.vala  Media.vala  Scanner.vala  UriScanner.vala
lib/Interfaces/: Client.vala  ColumnBox.vala  GSTagger.vala  GenericList.vala  ListStack.vala  Scanner.vala  StackWrapper.vala
lib/LViews/: ColumnView.vala  GridView.vala  ListView.vala  PresetList.vala  TileRenderer.vala
lib/Tools/: CellDataHelper.vala  FileUtils.vala  GuiUtils.vala  String.vala  TimeUtils.vala
meson/: meson_post_install.py
src/: Application.vala  MainWindow.vala  meson.build
src/Dialogs/: About.vala  DefaultMusicDir.vala  ImportFolder.vala  MusicFolderConfirmation.vala  PreferencesWindow.vala  SmartPlaylistEditor.vala
src/Objects/: CategoryStore.vala  LibraryTagger.vala
src/Services/: DataBaseManager.vala  ImportManager.vala  LibraryManager.vala  LibraryScanner.vala  PlaylistManager.vala
src/Views/: AlbumImage.vala  AlbumView.vala  ColumnAlbum.vala  ColumnBrowser.vala  ColumnView.vala  CustomButton.vala  DnDSelection.vala  OptionChooser.vala  PlayListCategory.vala  ProgressBox.vala  ScanLibraryAction.vala  SourceListItem.vala  SourceListRoot.vala  ViewSelector.vala
src/Widgets/: ActionStack.vala  ColumnsView.vala  DnDSelection.vala  EqualizerPopover.vala  MediaMenu.vala  MenuPopover.vala  MusicStack.vala  PlaylistStack.vala  QueueStack.vala  SourceListView.vala  StatusBar.vala  TopDisplay.vala  ViewStack.vala
