common_files = files (
    'Enums.vala',
    'Constants.vala',
    'CObjects/Media.vala',
    'Interfaces/GSTagger.vala',
    'Tools/FileUtils.vala',
    'Tools/String.vala',
    'Tools/TimeUtils.vala',
)

core_files = common_files
core_files += files (
    'CObjects/Scanner.vala',
)

client_files = common_files
client_files += files (
    'Interfaces/Client.vala',
)

app_files = client_files
app_files += files (
    'Structs.vala',
    'Interfaces/GenericList.vala',
    'Interfaces/StackWrapper.vala',
    'LViews/GridView.vala',
    'LViews/ListView.vala',
    'LViews/TileRenderer.vala',
    'Tools/CellDataHelper.vala',
    'Tools/GuiUtils.vala',
)
