executable(
    meson.project_name(),
    'Application.vala',
    'MainWindow.vala',
    'Dialogs/MusicFolderConfirmation.vala',
    'Dialogs/PreferencesWindow.vala',
    'Objects/LibraryTagger.vala',
    'Services/LibraryManager.vala',
    'Services/LibraryScanner.vala',
    'Views/AlbumImage.vala',
    'Views/AlbumView.vala',
    'Views/ColumnBrowser.vala',
    'Views/CustomButton.vala',
    'Views/DnDSelection.vala',
    'Views/PlayListCategory.vala',
    'Views/SourceListItem.vala',
    'Views/SourceListRoot.vala',
    'Widgets/ColumnsView.vala',
    'Widgets/MusicStack.vala',
    'Widgets/QueueStack.vala',
    'Widgets/SourceListView.vala',
    'Widgets/StatusBar.vala',
    'Widgets/TopDisplay.vala',
    'Widgets/ViewStack.vala',
    app_files,
    vala_args: vala_args,
    dependencies: app_deps,
    install : true
)
