executable(
    meson.project_name(),
    'Application.vala',
    'MainWindow.vala',
    'Dialogs/MusicFolderConfirmation.vala',
    'Dialogs/PreferencesWindow.vala',
    'Objects/LibraryTagger.vala',
    'Services/LibraryManager.vala',
    'Services/LibraryScanner.vala',
    'Services/PlaylistManager.vala',
    'Views/AlbumImage.vala',
    'Views/AlbumView.vala',
    'Views/ColumnBrowser.vala',
    'Views/CustomButton.vala',
    'Views/DnDSelection.vala',
    'Views/OptionChooser.vala',
    'Views/PlayListCategory.vala',
    'Views/ProgressBox.vala',
    'Views/SourceListItem.vala',
    'Views/SourceListRoot.vala',
    'Views/ViewSelector.vala',
    'Widgets/ColumnsView.vala',
    'Widgets/EqualizerPopover.vala',
    'Widgets/MusicStack.vala',
    'Widgets/PlaylistStack.vala',
    'Widgets/QueueStack.vala',
    'Widgets/SourceListView.vala',
    'Widgets/StatusBar.vala',
    'Widgets/TopDisplay.vala',
    'Widgets/ViewStack.vala',
    app_files,
    cssresources,
    vala_args: vala_args,
    dependencies: app_deps,
    install : true
)
