executable(
    meson.project_name(),
    'Application.vala',
    'MainWindow.vala',
    'Dialogs/About.vala',
    'Dialogs/ImportFolder.vala',
    'Dialogs/PreferencesWindow.vala',
    'Dialogs/SmartPlaylistEditor.vala',
    'Objects/CategoryStore.vala',
    'Objects/LibraryTagger.vala',
    'Services/ImportManager.vala',
    'Services/LibraryManager.vala',
    'Services/LibraryScanner.vala',
    'Services/PlaylistManager.vala',
    'Views/AlbumImage.vala',
    'Views/AlbumView.vala',
    'Views/ColumnAlbum.vala',
    'Views/ColumnBrowser.vala',
    'Views/CustomButton.vala',
    'Views/DnDSelection.vala',
    'Views/OptionChooser.vala',
    'Views/PlayListCategory.vala',
    'Views/ProgressBox.vala',
    'Views/ScanLibraryAction.vala',
    'Views/SourceListItem.vala',
    'Views/SourceListRoot.vala',
    'Views/ViewSelector.vala',
    'Widgets/ActionStack.vala',
    'Widgets/ColumnsView.vala',
    'Widgets/EqualizerPopover.vala',
    'Widgets/MenuPopover.vala',
    'Widgets/MusicStack.vala',
    'Widgets/PlaylistStack.vala',
    'Widgets/QueueStack.vala',
    'Widgets/SourceListView.vala',
    'Widgets/StatusBar.vala',
    'Widgets/TopDisplay.vala',
    'Widgets/ViewStack.vala',
    app_files,
    cssresources,
    config_header,
    vala_args: vala_args,
    dependencies: app_deps,
    install : true
)
